--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/MerkOverzicht.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/MerkOverzicht.cshtml
@@ -43,7 +43,7 @@
                         {
                             <a class="a2" asp-action="EditMerk" asp-route-id="@item.MerkID" >Bewerk</a>
                             <a class="a2" asp-action="DeleteMerk" asp-route-id="@item.MerkID" 
-                               onclick="return confirm('Weet je zeker dat je het merk @item.Naam wilt verwijderen' )">
+                               onclick="return confirm('Weet je zeker dat je het merk @item.Naam wilt verwijderen?' )">
                         Verwijder</a>
                         }
                     </td>
