--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Home/Index.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
             <div class="text-center">
                 <h1 class="display-4">Welkom</h1>
                 <p>Door op de knop te drukken kan u mijn mooie verzameling bekijken.</p>
-                <form asp-area="" asp-controller="Items" asp-action="ItemOverzicht">
+                <form asp-area="" asp-controller="VerzamelObject" asp-action="VerzamelObjectOverzicht">
                     <button class="btn" onclick="this.blur();">Bekijk mijn verzameling</button>
                 </form>
                 
