--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Info/Info.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Info/Info.cshtml
@@ -1,5 +1,24 @@
 ﻿@{
     ViewData["Title"] = "Info";
 }
+<div>
+    <h1 class="text-center">Informatie over de maker van deze applicatie</h1>
+</div>
 
-<h1 class="row-marge">Informatie over de admin</h1>
+
+<div class="container">
+    <div class="row row-marge">
+        <div class="col-md-5" align="center">
+            <img src="~/images/fotoM.jpg" style="width: 35%"  class="img-fluid rounded" />
+        </div>
+        <div class="col-md-7">
+            <div class="text-center">
+                <p>Mijn naam is Robin Ceustermans, ik ben student te Thomas More in Geel en ik zit in het tweede jaar.</p>
+                <br/>
+                <p>Deze applicatie is bedoeld voor één persoon die handelt als de enige admin,
+                de admin kan alle CRUD-operaties uitvoeren voor een merk, mede-eigenaren en verzamelobjecten,
+                met daarbinnen ook voor de entiteit MedeEigenaarObject bij het bewerken van een verzamelobject</p>
+            </div>
+        </div>
+    </div>
+</div>
