--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Privacy/Privacy.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Privacy/Privacy.cshtml
@@ -3,4 +3,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Enkel data dat nodig is voor het gebruik op deze applicatie zal opgeslagen worden, strict in functionaliteit voor deze applicatie.</p>
