--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -2,14 +2,16 @@
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
-<ul class="nav nav-pills flex-column accountsettingsNavItem">
-    <li id="profile" class="nav-item profile "><a class="accountsettingsNavItem profile  nav-link @ManageNavPages.IndexNavClass(ViewContext)" asp-page="./Index">Profiel</a></li>
-    <li class="nav-item "><a class="nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email">Email</a></li>
-    <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Wachtwoord</a></li>
+
+@*de stijl kan voor één of andere reden niet aangepast worden, verder durf ik geen aanpassingen te doen wegens veiligheid*@
+<ul class="nav nav-pills flex-column  accountsettingsNavItem">
+    <li id="profile1" style="list-style:none" class="nav-item profile" ><a class="accountsettingsNavItem profile  nav-link @ManageNavPages.IndexNavClass(ViewContext)" asp-page="./Index">Profiel</a></li>
+    <li id="profile2" class="nav-item profile"><a class="nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email">Email</a></li>
+    <li id="profile3" class="nav-item profile"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Wachtwoord</a></li>
     @if (hasExternalLogins)
     {
-        <li id="external-logins" class="nav-item"><a id="external-login" class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-page="./ExternalLogins">Externe logins</a></li>
+        <li id="external-logins" class="nav-item profile"><a id="external-login" class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-page="./ExternalLogins">Externe logins</a></li>
     }
-    <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authenticatie</a></li>
-    <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
+    <li id="profile5" class="nav-item profile"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authenticatie</a></li>
+    <li id="profile6" class="nav-item profile"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
 </ul>
