--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/MedeEigenaar/EditMedeEigenaar.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/MedeEigenaar/EditMedeEigenaar.cshtml
@@ -19,7 +19,7 @@
                 <span asp-validation-for="Familienaam" class="text-danger"></span>
             </div>
             <div class="form-group" id="">
-                <input type="submit" value="Pas mede-eigenaar aan" class="btn btn-primary" />
+                <input type="submit" onclick="this.form.submit(); this.disabled = true;" value="Pas mede-eigenaar aan" class="btn btn-primary" />
             </div>
         </form>
 
