--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/CreateMerk.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/CreateMerk.cshtml
@@ -27,7 +27,7 @@
                 <span asp-validation-for="LandID" class="text-danger"></span>
             </div>
             <div class="form-group" id="">
-                <input type="submit" value="Maak merk aan" class="btn btn-primary" />
+                <input type="submit" onclick="this.form.submit(); this.disabled = true;" value="Maak merk aan" class="btn btn-primary" />
             </div>
         </form>
 
