--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/EditMerk.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/EditMerk.cshtml
@@ -26,7 +26,7 @@
                 <span asp-validation-for="LandID" class="text-danger"></span>
             </div>
             <div class="form-group" id="">
-                <input type="submit" value="EditMerk" class="btn btn-primary" />
+                <input type="submit" onclick="this.form.submit(); this.disabled = true;" value="EditMerk" class="btn btn-primary" />
             </div>
         </form>
 
