--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/VerzamelObject/CreateVerzamelObject.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/VerzamelObject/CreateVerzamelObject.cshtml
@@ -87,8 +87,8 @@
             <span asp-validation-for="Beschrijving" class="text-danger"></span>
         </div>
     </div>
-    <div class="form-group" id="">
-        <input type="submit" value="Maak verzamelobject aan" class="btn btn-primary" />
+    <div class="form-group">
+        <input id="send" type="submit" onclick="this.form.submit(); this.disabled = true;" value="Maak verzamelobject aan" class="btn btn-primary" />
     </div>
 </form>
 
