--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/VerzamelObject/EditVerzamelObject.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/VerzamelObject/EditVerzamelObject.cshtml
@@ -110,7 +110,7 @@
                                 <td>
                                     @if (User.IsInRole("admin"))
                                     {
-                                        <a class="a2 text-success" asp-action="CreateMedeEigenaarObject"  asp-route-id="@item.MedeEigenaarID" asp-route-id2="@Model.VerzamelObjectID" >Voeg Toe</a>
+                                        <a class="a2 text-dark" asp-action="CreateMedeEigenaarObject"  asp-route-id="@item.MedeEigenaarID" asp-route-id2="@Model.VerzamelObjectID" >Voeg Toe</a>
                                     }
                                 </td>
                             </tr>
@@ -154,7 +154,7 @@
                                 <td>
                                     @if (User.IsInRole("admin"))
                                     {
-                                    <a class="a2 text-success" asp-action="DeleteMedeEigenaarObject" asp-route-id="@item.MedeEigenaarID" asp-route-id2="@Model.VerzamelObjectID">Verwijder</a>
+                                    <a class="a2 text-danger" asp-action="DeleteMedeEigenaarObject" asp-route-id="@item.MedeEigenaarID" asp-route-id2="@Model.VerzamelObjectID">Verwijder</a>
                                     }
                                 </td>
                             </tr>
@@ -182,7 +182,7 @@
         </div>
     </div>
     <div class="form-group" id="">
-        <input type="submit" value="Pas verzamelobject aan" class="btn btn-primary" />
+        <input type="submit" onclick="this.form.submit(); this.disabled = true;" value="Pas verzamelobject aan" class="btn btn-primary" />
     </div>
 </form>
 
